fixing uid in controllers + update logic
